# green-api-test-task

./: .env.example  README.md  docker-compose.yml  index.html  pyproject.toml  script.js  styles.css
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
configs/: config.json  nginx.conf  site.conf
frontend/: index.html  script.js  styles.css
src/: main.py
