[tool.poetry]
name = "green-api-test-task"
version = "0.1.0"
description = ""
authors = ["KirGorbunov <KirGorbunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
fastapi = "^0.115.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
uvicorn = "^0.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
